finition de la section des acteurs sur la page de présentation générale

--- a/index.html
+++ b/index.html
@@ -70,43 +70,98 @@
           <span class="colored">principaux</span>
         </h2>
         <span></span>
-        <p data-slide-up>Découvre le personnage joué par chaque acteur.</p>
+        <p data-smooth-appear>Découvre le personnage joué par chaque acteur.</p>
       </header>
 
       <div class="actors-grid">
-        <div class="actor-card">
-          <div class="images-container">
-            <img src="./public/actor-img.png" alt="Image d'acteur">
-            <img src="./public/actor-img.png" alt="Image d'acteur">
-          </div>
+        <div>
+          <div class="actor-card">
+            <div class="images-container">
+              <img src="./public/actor-img.png" alt="Image d'acteur">
+              <img src="./public/actor-img.png" alt="Image d'acteur">
+            </div>
 
-          <div class="hover-overlay">
-            <span>?</span>
-          </div>
+            <div class="hover-overlay">
+              <span>?</span>
+            </div>
 
-          <div class="actor-infos-overlay">
-            <h3>Lacie Pound</h3>
-            <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
-          </div>
+            <div class="actor-infos-overlay">
+              <h3>Lacie Pound</h3>
+              <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
+            </div>
 
-          <p>Bryce Dallas Howard</p>
+            <p>Bryce Dallas Howard</p>
+          </div>
+          <div class="actor-card">
+            <div class="images-container">
+              <img src="./public/actor-img.png" alt="Image d'acteur">
+              <img src="./public/actor-img.png" alt="Image d'acteur">
+            </div>
+
+            <div class="hover-overlay">
+              <span>?</span>
+            </div>
+
+            <div class="actor-infos-overlay">
+              <h3>Lacie Pound</h3>
+              <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
+            </div>
+
+            <p>Bryce Dallas Howard</p>
+          </div>
         </div>
-        <div class="actor-card">
-          <div class="images-container">
-            <img src="./public/actor-img.png" alt="Image d'acteur">
-            <img src="./public/actor-img.png" alt="Image d'acteur">
-          </div>
+        <div>
+          <div class="actor-card">
+            <div class="images-container">
+              <img src="./public/actor-img.png" alt="Image d'acteur">
+              <img src="./public/actor-img.png" alt="Image d'acteur">
+            </div>
 
-          <div class="hover-overlay">
-            <span>?</span>
-          </div>
+            <div class="hover-overlay">
+              <span>?</span>
+            </div>
 
-          <div class="actor-infos-overlay">
-            <h3>Lacie Pound</h3>
-            <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
-          </div>
+            <div class="actor-infos-overlay">
+              <h3>Lacie Pound</h3>
+              <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
+            </div>
 
-          <p>Bryce Dallas Howard</p>
+            <p>Bryce Dallas Howard</p>
+          </div>
+          <div class="actor-card">
+            <div class="images-container">
+              <img src="./public/actor-img.png" alt="Image d'acteur">
+              <img src="./public/actor-img.png" alt="Image d'acteur">
+            </div>
+
+            <div class="hover-overlay">
+              <span>?</span>
+            </div>
+
+            <div class="actor-infos-overlay">
+              <h3>Lacie Pound</h3>
+              <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
+            </div>
+
+            <p>Bryce Dallas Howard</p>
+          </div>
+          <div class="actor-card">
+            <div class="images-container">
+              <img src="./public/actor-img.png" alt="Image d'acteur">
+              <img src="./public/actor-img.png" alt="Image d'acteur">
+            </div>
+
+            <div class="hover-overlay">
+              <span>?</span>
+            </div>
+
+            <div class="actor-infos-overlay">
+              <h3>Lacie Pound</h3>
+              <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
+            </div>
+
+            <p>Bryce Dallas Howard</p>
+          </div>
         </div>
       </div>
     </section>
