--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </a>
 
       <ul>
-        <li><a href="pages/saisons.html">Saisons</a></li>
+        <li><a href="/pages/saisons.html">Saisons</a></li>
         <li><a href="#">Critiques</a></li>
-        <li><a href="pages/backstage.html">Backstage</a></li>
+        <li><a href="/pages/backstage.html">Backstage</a></li>
       </ul>
     </nav>
 
