--- a/pages/saisons.html
+++ b/pages/saisons.html
@@ -92,38 +92,50 @@
       <h1 class="test text-lead">Toutes les saisons</h1>
 
       <article class="cadre_presentation_saison">
+
+        <!-- POSTER, ZONE A GAUCHE -->
         <div>
           <p class="text-lead">Saison 1</p>
 
-          <!-- IMAGE + ZONE DE TEXTE A COTE -->
           <figure>
             <img src="../data/images/image_test.jpg" class="shine-image" width="700"/>
             <figcaption><p>3 Episodes</p> <p>2013</p></figcaption>
           </figure>
                     
-          <a class="text-lead">Regarder</a>
+          <a class="text-lead" href="">Regarder</a>
         </div>
 
+        <!-- ZONE A DROITE -->
         <div>
 
           <!-- zone de texte -->
-          <hr>
-          <p>
-            Un premier ministre est soumis à un chantage odieux. Un monde où il
-            faut pédaler pour subsister entre les écrans. Un avocat exploite sa
-            base de données de souvenirs pour vérifier la fidélité de sa femme.
-            Trois aperçus glaçants d'un monde finalement pas très éloigné du
-            nôtre. Meilleure mini-série aux International Emmy Awards 2012 et
-            meilleure série au Festival de la Rose d'or de Lucerne la même année,
-            une série d'anthologie qui explore les travers et les angoisses du
-            monde moderne.
-          </p>
-          <hr>
+          <div class="text-zone">
+            <hr>
+            <p class="resume-text">
+              Un premier ministre est soumis à un chantage odieux. Un monde où il
+              faut pédaler pour subsister entre les écrans. Un avocat exploite sa
+              base de données de souvenirs pour vérifier la fidélité de sa femme.
+              Trois aperçus glaçants d'un monde finalement pas très éloigné du
+              nôtre. Meilleure mini-série aux International Emmy Awards 2012 et
+              meilleure série au Festival de la Rose d'or de Lucerne la même année,
+              une série d'anthologie qui explore les travers et les angoisses du
+              monde moderne.
+            </p>
+
+            <p class="moments-forts-text">
+              Moments forts !
+            </p>
+
+            <p class="avis-text">
+              Avis de presse !
+            </p>
+            <hr>
+          </div>
 
           <!-- Mentions utiles en-bas -->
           <div>
 
-            <!-- Mentions utiles à gauche -->
+            <!-- Boutons + likes -->
             <div>
               <svg width="35" height="33" viewBox="0 0 35 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.95 0.124902C11.8584 0.302637 12.4489 1.16738 12.2672 2.05605L12.1868 2.4457C12.0016 3.3583 11.6592 4.22646 11.1806 5.01601H16.2118C17.1377 5.01601 17.8889 5.75088 17.8889 6.65664C17.8889 7.28896 17.522 7.83926 16.984 8.11269C17.3648 8.41348 17.6094 8.8749 17.6094 9.39101C17.6094 10.1908 17.0224 10.8573 16.2502 11.0009C16.404 11.2504 16.4913 11.5409 16.4913 11.852C16.4913 12.58 16.0057 13.1986 15.3348 13.4105C15.3593 13.5233 15.3733 13.643 15.3733 13.766C15.3733 14.6718 14.6221 15.4066 13.6962 15.4066H10.2896C9.62576 15.4066 8.97938 15.2152 8.42734 14.8563L7.08218 13.9779C6.14931 13.3695 5.59028 12.3441 5.59028 11.247V9.93789V8.29726V7.44619C5.59028 6.44814 6.05497 5.5082 6.84809 4.88271L7.10664 4.68105C8.03253 3.95644 8.66493 2.93789 8.89553 1.80312L8.97589 1.41348C9.15757 0.524804 10.0415 -0.0528321 10.95 0.124902ZM1.11806 5.56289H3.35417C3.97259 5.56289 4.47222 6.05166 4.47222 6.65664V14.3129C4.47222 14.9179 3.97259 15.4066 3.35417 15.4066H1.11806C0.499631 15.4066 0 14.9179 0 14.3129V6.65664C0 6.05166 0.499631 5.56289 1.11806 5.56289Z" fill="white"/>
@@ -134,14 +146,14 @@
                 <p class="text-lead">+3K</p>
 
                 <!-- moments forts -->
-                <a>
+                <button class="moments-forts-button">
                   <svg class="saison-bouton" width="10" height="45" viewBox="0 0 9 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M7.46214 3.65407C7.46214 1.95215 6.08714 0.577148 4.38522 0.577148C2.68329 0.577148 1.30829 1.95215 1.30829 3.65407V28.2695C1.30829 29.9714 2.68329 31.3464 4.38522 31.3464C6.08714 31.3464 7.46214 29.9714 7.46214 28.2695V3.65407ZM4.38522 43.6541C5.40528 43.6541 6.38356 43.2489 7.10486 42.5276C7.82615 41.8063 8.23137 40.828 8.23137 39.8079C8.23137 38.7879 7.82615 37.8096 7.10486 37.0883C6.38356 36.367 5.40528 35.9618 4.38522 35.9618C3.36515 35.9618 2.38687 36.367 1.66557 37.0883C0.944281 37.8096 0.539063 38.7879 0.539062 39.8079C0.539063 40.828 0.944281 41.8063 1.66557 42.5276C2.38687 43.2489 3.36515 43.6541 4.38522 43.6541Z" fill="white"/>
                   </svg>
-                </a>
+                </button>
 
                 <!-- avis presse -->
-                <a>
+                <a class="avis-button">
                   <svg class="saison-bouton" width="25" height="25" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.76923 3.88424C5.76923 1.76285 7.49399 0.0380859 9.61539 0.0380859H26.9231C29.0445 0.0380859 30.7692 1.76285 30.7692 3.88424V23.115C30.7692 25.2364 29.0445 26.9612 26.9231 26.9612H4.80769C2.15144 26.9612 0 24.8097 0 22.1535V5.80732C0 4.74361 0.859375 3.88424 1.92308 3.88424C2.98678 3.88424 3.84615 4.74361 3.84615 5.80732V22.1535C3.84615 22.6823 4.27885 23.115 4.80769 23.115C5.33654 23.115 5.76923 22.6823 5.76923 22.1535V3.88424ZM9.61539 5.32655V10.1342C9.61539 10.9335 10.2584 11.5765 11.0577 11.5765H17.7885C18.5877 11.5765 19.2308 10.9335 19.2308 10.1342V5.32655C19.2308 4.52727 18.5877 3.88424 17.7885 3.88424H11.0577C10.2584 3.88424 9.61539 4.52727 9.61539 5.32655ZM22.1154 4.84578C22.1154 5.37462 22.5481 5.80732 23.0769 5.80732H25.9615C26.4904 5.80732 26.9231 5.37462 26.9231 4.84578C26.9231 4.31693 26.4904 3.88424 25.9615 3.88424H23.0769C22.5481 3.88424 22.1154 4.31693 22.1154 4.84578ZM22.1154 10.615C22.1154 11.1439 22.5481 11.5765 23.0769 11.5765H25.9615C26.4904 11.5765 26.9231 11.1439 26.9231 10.615C26.9231 10.0862 26.4904 9.65347 25.9615 9.65347H23.0769C22.5481 9.65347 22.1154 10.0862 22.1154 10.615ZM9.61539 16.3842C9.61539 16.9131 10.0481 17.3458 10.5769 17.3458H25.9615C26.4904 17.3458 26.9231 16.9131 26.9231 16.3842C26.9231 15.8554 26.4904 15.4227 25.9615 15.4227H10.5769C10.0481 15.4227 9.61539 15.8554 9.61539 16.3842ZM9.61539 22.1535C9.61539 22.6823 10.0481 23.115 10.5769 23.115H25.9615C26.4904 23.115 26.9231 22.6823 26.9231 22.1535C26.9231 21.6246 26.4904 21.1919 25.9615 21.1919H10.5769C10.0481 21.1919 9.61539 21.6246 9.61539 22.1535Z" fill="white"/>
                   </svg>
@@ -163,6 +175,7 @@
               </clipPath>
               </defs>
             </svg>
+
           </div>
             
 
