--- a/index.html
+++ b/index.html
@@ -164,6 +164,36 @@
           </div>
         </div>
       </div>
+
+      <div>
+        <p>Bien sur il te reste plein de personnages à découvrir</p>
+        <a href="" class="button primary">En découvrir plus</a>
+      </div>
+    </section>
+
+    <section id="price">
+      <header>
+        <h2 data-slide-up>
+          <span class="colored">4</span>prix
+        </h2>
+
+        <div class="price-wrapper">
+          <div>
+            <img src="public/prices/bafta-tv-awards.png" alt="Bafta price">
+            <div>
+              <h3>2012</h3>
+              <p>BAFTA TV Awards</p>
+            </div>
+          </div>
+          <div>
+            <img src="public/prices/bafta-tv-awards.png" alt="Bafta price">
+            <div>
+              <h3>2012</h3>
+              <p>BAFTA TV Awards</p>
+            </div>
+          </div>
+        </div>
+      </header>
     </section>
 
     <script type="module" src="js/main.js"></script>
