maj scss article

--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -48,6 +48,7 @@
     <main>
       <article class="articleClair">
         <h2>Titre 1</h2>
+        <hr>
         <p>justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.</p>
         <details>
@@ -61,6 +62,7 @@
       <article class="articleSombre">
         <div>
           <h2>Titre 2</h2>
+          <hr>
           <p>justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris </p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.
             Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, inter</p>
@@ -72,9 +74,9 @@
             <img src="" title="image pour plus tard" alt="image pour plus tard">
           </details>
         </article>
-        <hr>
-        <article>
+        <article class="articleSombre">
           <h2>Titre 3</h2>
+          <hr>
           <p>justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris </p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.
             Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, inter</p>
@@ -90,6 +92,7 @@
       <hr>
       <article class="articleClair">
         <h2>Titre 4</h2>
+        <hr>
         <p>justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.</p>
         <details>
@@ -100,8 +103,9 @@
         </details>
       </article>
       <hr>
-      <article>
+      <article class="articleSombre">
         <h2>Titre 5</h2>
+        <hr>
         <p>justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.</p>
         <details>
@@ -111,7 +115,6 @@
           <img src="" title="image pour plus tard" alt="image pour plus tard">
         </details>
       </article>
-      <hr>
     </main>
     <footer>
       <div>
