--- a/pages/saisons.html
+++ b/pages/saisons.html
@@ -89,7 +89,7 @@
     </header>
 
     <main>
-      <h1 class="test text-lead">Toutes les saisons</h1>
+      <h1>Toutes les saisons</h1>
 
       <article class="cadre_presentation_saison">
 
@@ -111,7 +111,7 @@
           <!-- zone de texte -->
           <div class="text-zone">
             <hr>
-            <p class="resume-text">
+            <p class=" text active" data-text="resume">
               Un premier ministre est soumis à un chantage odieux. Un monde où il
               faut pédaler pour subsister entre les écrans. Un avocat exploite sa
               base de données de souvenirs pour vérifier la fidélité de sa femme.
@@ -122,11 +122,11 @@
               monde moderne.
             </p>
 
-            <p class="moments-forts-text">
+            <p class="text" data-text="moments">
               Moments forts !
             </p>
 
-            <p class="avis-text">
+            <p class="text" data-text="avis">
               Avis de presse !
             </p>
             <hr>
@@ -146,18 +146,25 @@
                 <p class="text-lead">+3K</p>
 
                 <!-- moments forts -->
-                <button class="moments-forts-button">
-                  <svg class="saison-bouton" width="10" height="45" viewBox="0 0 9 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="trigger" data-button="moments">
+                  <svg width="10" height="45" viewBox="0 0 9 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M7.46214 3.65407C7.46214 1.95215 6.08714 0.577148 4.38522 0.577148C2.68329 0.577148 1.30829 1.95215 1.30829 3.65407V28.2695C1.30829 29.9714 2.68329 31.3464 4.38522 31.3464C6.08714 31.3464 7.46214 29.9714 7.46214 28.2695V3.65407ZM4.38522 43.6541C5.40528 43.6541 6.38356 43.2489 7.10486 42.5276C7.82615 41.8063 8.23137 40.828 8.23137 39.8079C8.23137 38.7879 7.82615 37.8096 7.10486 37.0883C6.38356 36.367 5.40528 35.9618 4.38522 35.9618C3.36515 35.9618 2.38687 36.367 1.66557 37.0883C0.944281 37.8096 0.539063 38.7879 0.539062 39.8079C0.539063 40.828 0.944281 41.8063 1.66557 42.5276C2.38687 43.2489 3.36515 43.6541 4.38522 43.6541Z" fill="white"/>
-                  </svg>
+                  </svg>      
                 </button>
 
                 <!-- avis presse -->
-                <a class="avis-button">
-                  <svg class="saison-bouton" width="25" height="25" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="trigger" data-button="avis">
+                  <svg width="50" height="50" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.76923 3.88424C5.76923 1.76285 7.49399 0.0380859 9.61539 0.0380859H26.9231C29.0445 0.0380859 30.7692 1.76285 30.7692 3.88424V23.115C30.7692 25.2364 29.0445 26.9612 26.9231 26.9612H4.80769C2.15144 26.9612 0 24.8097 0 22.1535V5.80732C0 4.74361 0.859375 3.88424 1.92308 3.88424C2.98678 3.88424 3.84615 4.74361 3.84615 5.80732V22.1535C3.84615 22.6823 4.27885 23.115 4.80769 23.115C5.33654 23.115 5.76923 22.6823 5.76923 22.1535V3.88424ZM9.61539 5.32655V10.1342C9.61539 10.9335 10.2584 11.5765 11.0577 11.5765H17.7885C18.5877 11.5765 19.2308 10.9335 19.2308 10.1342V5.32655C19.2308 4.52727 18.5877 3.88424 17.7885 3.88424H11.0577C10.2584 3.88424 9.61539 4.52727 9.61539 5.32655ZM22.1154 4.84578C22.1154 5.37462 22.5481 5.80732 23.0769 5.80732H25.9615C26.4904 5.80732 26.9231 5.37462 26.9231 4.84578C26.9231 4.31693 26.4904 3.88424 25.9615 3.88424H23.0769C22.5481 3.88424 22.1154 4.31693 22.1154 4.84578ZM22.1154 10.615C22.1154 11.1439 22.5481 11.5765 23.0769 11.5765H25.9615C26.4904 11.5765 26.9231 11.1439 26.9231 10.615C26.9231 10.0862 26.4904 9.65347 25.9615 9.65347H23.0769C22.5481 9.65347 22.1154 10.0862 22.1154 10.615ZM9.61539 16.3842C9.61539 16.9131 10.0481 17.3458 10.5769 17.3458H25.9615C26.4904 17.3458 26.9231 16.9131 26.9231 16.3842C26.9231 15.8554 26.4904 15.4227 25.9615 15.4227H10.5769C10.0481 15.4227 9.61539 15.8554 9.61539 16.3842ZM9.61539 22.1535C9.61539 22.6823 10.0481 23.115 10.5769 23.115H25.9615C26.4904 23.115 26.9231 22.6823 26.9231 22.1535C26.9231 21.6246 26.4904 21.1919 25.9615 21.1919H10.5769C10.0481 21.1919 9.61539 21.6246 9.61539 22.1535Z" fill="white"/>
                   </svg>
-                </a>
+                </button>
+
+                <!-- resume -->
+                <button class="trigger" data-button="resume">
+                  <svg width="45" height="45" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16.027 9.02637L16.4684 8.58496L15.1442 7.26074L12.7184 4.83496L11.3942 3.51074L10.9528 3.95215L10.07 4.83496L2.28872 12.6162C1.88247 13.0225 1.58559 13.5264 1.42153 14.0771L0.0387177 18.7803C-0.0589386 19.1084 0.0309051 19.4639 0.276999 19.7061C0.523093 19.9482 0.874655 20.0381 1.20278 19.9443L5.902 18.5615C6.45278 18.3975 6.95669 18.1006 7.36294 17.6943L15.1442 9.91309L16.027 9.02637ZM6.24966 15.6045L5.89419 16.4912C5.73794 16.6123 5.56216 16.7021 5.37466 16.7607L2.31997 17.6592L3.21841 14.6084C3.27309 14.417 3.36684 14.2412 3.48794 14.0889L4.37466 13.7334V14.9834C4.37466 15.3271 4.65591 15.6084 4.99966 15.6084H6.24966V15.6045ZM14.1676 0.733398L13.6051 1.2998L12.7223 2.18262L12.277 2.62402L13.6012 3.94824L16.027 6.37402L17.3512 7.69824L17.7926 7.25684L18.6754 6.37402L19.2418 5.80762C20.2184 4.83106 20.2184 3.24902 19.2418 2.27246L17.7067 0.733398C16.7301 -0.243164 15.1481 -0.243164 14.1715 0.733398H14.1676ZM12.3161 7.2959L6.69106 12.9209C6.44887 13.1631 6.05044 13.1631 5.80825 12.9209C5.56606 12.6787 5.56606 12.2803 5.80825 12.0381L11.4333 6.41309C11.6754 6.1709 12.0739 6.1709 12.3161 6.41309C12.5582 6.65527 12.5582 7.05371 12.3161 7.2959Z" fill="white"/>
+                  </svg>
+                </button>
             </div>
 
             <!-- Etoiles -->
