ajout du scroll horizontal sur la section des prix

--- a/index.html
+++ b/index.html
@@ -179,18 +179,47 @@
 
         <div class="price-wrapper">
           <div>
-            <img src="public/prices/bafta-tv-awards.png" alt="Bafta price">
             <div>
-              <h3>2012</h3>
-              <p>BAFTA TV Awards</p>
+              <img src="public/prices/bafta-tv-awards.png" alt="Bafta price">
+              <div>
+                <h3>2012</h3>
+                <p>BAFTA TV Awards</p>
+              </div>
             </div>
+            <span></span>
           </div>
+
           <div>
-            <img src="public/prices/bafta-tv-awards.png" alt="Bafta price">
             <div>
-              <h3>2012</h3>
-              <p>BAFTA TV Awards</p>
+              <img src="public/prices/satelite-award.png" alt="Bafta price">
+              <div>
+                <h3>2013</h3>
+                <p>Satellite Awards</p>
+              </div>
             </div>
+            <span></span>
+          </div>
+
+          <div>
+            <div>
+              <img src="public/prices/producers-guild-of-america-awards.png" alt="Bafta price">
+              <div>
+                <h3>2016</h3>
+                <p>Producers Guild of America Awards</p>
+              </div>
+            </div>
+            <span></span>
+          </div>
+
+          <div>
+            <div>
+              <img src="public/prices/emmy-awards.png" alt="Bafta price">
+              <div>
+                <h3>2017</h3>
+                <p>Emmy Awards</p>
+              </div>
+            </div>
+            <span></span>
           </div>
         </div>
       </header>
