--- a/index.html
+++ b/index.html
@@ -174,8 +174,10 @@
     <section id="price">
       <header>
         <h2 data-slide-up>
-          <span class="colored">4</span>prix
+          <span class="colored">4</span>
+          <span>prix</span>
         </h2>
+      </header>
 
         <div class="price-wrapper">
           <div>
@@ -222,7 +224,46 @@
             <span></span>
           </div>
         </div>
+    </section>
+
+    <section>
+      <header>
+        <h2 data-slide-up>
+          <span>Les</span>
+          <span class="colored">critiques</span>
+        </h2>
       </header>
+
+      <div class="swiper critique-slider">
+        <div class="swiper-wrapper slide-container">
+          <div class="swiper-slide">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquam dolor facere in laboriosam laborum maxime nisi possimus quis reiciendis. Commodi distinctio eveniet, iste minus quasi quos sapiente suscipit voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae consequatur deserunt dolorum eos esse expedita illo iusto, molestias nostrum numquam, officiis possimus qui sed sequi sit tempora ullam voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut blanditiis, esse excepturi harum impedit in, labore libero minus necessitatibus optio pariatur provident quod ratione recusandae, repellat reprehenderit sapiente voluptatem voluptatibus?</p>
+            <div>
+              <img src="public/media/telerama.png" />
+              <div class="stars">
+                <img src="public/star.svg" alt="star">
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquam dolor facere in laboriosam laborum maxime nisi possimus quis reiciendis. Commodi distinctio eveniet, iste minus quasi quos sapiente suscipit voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae consequatur deserunt dolorum eos esse expedita illo iusto, molestias nostrum numquam, officiis possimus qui sed sequi sit tempora ullam voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut blanditiis, esse excepturi harum impedit in, labore libero minus necessitatibus optio pariatur provident quod ratione recusandae, repellat reprehenderit sapiente voluptatem voluptatibus?</p>
+            <div>
+              <img src="public/media/telerama.png" />
+              <div class="stars">
+                <img src="public/star.svg" alt="star">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-button-prev">
+          <img src="public/caret-left.svg" alt="Caret">
+
+        </div>
+        <div class="swiper-button-next">
+          <img src="public/caret-left.svg" alt="Caret">
+
+        </div>
+      </div>
     </section>
 
     <script type="module" src="js/main.js"></script>
