--- a/pages/saisons.html
+++ b/pages/saisons.html
@@ -99,7 +99,7 @@
     </header>
 
     <main>
-      <h1 data-slide-up>Toutes les saisons</h1>
+      <h3 data-slide-up>Toutes les saisons</h3>
 
       <article class="cadre_presentation_saison">
 
@@ -192,15 +192,12 @@
               </clipPath>
               </defs>
             </svg>
-
           </div>
-            
-
         </div>
       </article>
 
       <!-- Ligne de séparation -->
-      <svg width="773" height="30" viewBox="0 0 773 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <svg width="773" height="30"  xmlns="http://www.w3.org/2000/svg">
         <path d="M0.566243 15L15 29.4338L29.4338 15L15 0.566243L0.566243 15ZM769.717 17.5C771.097 17.5 772.217 16.3807 772.217 15C772.217 13.6193 771.097 12.5 769.717 12.5V17.5ZM15 17.5H769.717V12.5H15V17.5Z" fill="#F67A60"/>
       </svg>
 
@@ -211,6 +208,8 @@
         <!-- liens pratiques -->
         <div>
           <div>
+
+            <a href="/">
             <svg
               width="30"
               height="27"
@@ -245,6 +244,7 @@
                 fill="#C58AEE"
               />
             </svg>
+            </a>
 
             <p>Tabas'<strong>KHO</strong></p>
           </div>
