--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -23,9 +23,9 @@
       </a>
 
       <ul>
-        <li><a href="#">Saisons</a></li>
-        <li><a href="#">Critiques</a></li>
-        <li><a href="pages/backstage.html" class="active">Backstage</a></li>
+        <li><a href="/pages/saisons.html">Saisons</a></li>
+        <li><a href="/pages/critiques.html">Critiques</a></li>
+        <li><a href="/pages/backstage.html" class="active">Backstage</a></li>
       </ul>
     </nav>
     <header>
@@ -50,13 +50,14 @@
         <h2>Titre 1</h2>
         <hr>
         <h5>justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris </h5>
+        <br>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.</p>
         <details>
           <summary> </summary>
+            <img src="../data/images/image_test.jpg" title="image pour plus tard" alt="image pour plus tard">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum. Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris sed imperdiet erat, id elementum est. Proin aliquet quis felis quis mattis. Praesent vel vehicula erat, quis lacinia ipsum. Vivamus fermentum ut mi eget sagittis. Sed eu nisi eget tortor mattis imperdiet. Nullam vel tellus feugiat, cursus lectus at, pharetra ligula. Mauris pretium ullamcorper risus, eget luctus leo posuere at. Fusce nunc mauris, finibus eget nunc quis, molestie semper est. Morbi at dui sit amet urna condimentum ultricies eget sit amet lorem. Donec ut mi ex.
               Vivamus ultrices mattis risus, ut vestibulum mauris rutrum quis. Nam augue ex, accumsan quis ornare ac, suscipit vitae odio. Sed facilisis lectus nec vestibulum dignissim. Quisque dui ex, porttitor ultricies justo vitae, pharetra malesuada ipsum. Sed quis ultricies metus. Pellentesque lobortis tempus sapien sit amet faucibus. Nullam velit mauris, dictum sit amet commodo sit amet, fringilla nec mi. Suspendisse sit amet neque nec justo aliquam efficitur eu quis ligula. Etiam erat lorem, dignissim vel orci ac, laoreet ornare.</p>
-            <img src="" title="image pour plus tard" alt="image pour plus tard">
-        </details>
+            </details>
       </article>
       <hr>
       <div>
@@ -65,30 +66,32 @@
           <h2>Titre 2</h2>
           <hr>
           <h5>justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris </h5>
+          <br>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.
             Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, inter</p>
           <details>
             <summary> </summary>
+              <img src="../data/images/image_test.jpg" title="image pour plus tard" alt="image pour plus tard">
               <p>Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.
                 Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris sed imperdiet erat, id elementum est. Proin aliquet quis felis quis mattis. Praesent vel vehicula erat, quis lacinia ipsum. Vivamus fermentum ut mi eget sagittis. Sed eu nisi eget tortor mattis imperdiet. Nullam vel tellus feugiat, cursus lectus at, pharetra ligula. Mauris pretium ullamcorper risus, eget luctus leo posuere at. Fusce nunc mauris, finibus eget nunc quis, molestie semper est. Morbi at dui sit amet urna condimentum ultricies eget sit amet lorem. Donec ut mi ex.
                 Vivamus ultrices mattis risus, ut vestibulum mauris rutrum quis. Nam augue ex, accumsan quis ornare ac, suscipit vitae odio. Sed facilisis lectus nec vestibulum dignissim. Quisque dui ex, porttitor ultricies justo vitae</p>
-              <img src="" title="image pour plus tard" alt="image pour plus tard">
-          </details>
+              </details>
         </article>
         <article class="articleSombre">
           <p class="datePublication">12 février 2089</p>
           <h2>Titre 3</h2>
           <hr>
           <h5>justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris </h5>
+          <br>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.
             Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, inter</p>
           <details>
             <summary> </summary>
+              <img src="../data/images/image_test.jpg" title="image pour plus tard" alt="image pour plus tard">
               <p>Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.
                 Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris sed imperdiet erat, id elementum est. Proin aliquet quis felis quis mattis. Praesent vel vehicula erat, quis lacinia ipsum. Vivamus fermentum ut mi eget sagittis. Sed eu nisi eget tortor mattis imperdiet. Nullam vel tellus feugiat, cursus lectus at, pharetra ligula. Mauris pretium ullamcorper risus, eget luctus leo posuere at. Fusce nunc mauris, finibus eget nunc quis, molestie semper est. Morbi at dui sit amet urna condimentum ultricies eget sit amet lorem. Donec ut mi ex.
                 Vivamus ultrices mattis risus, ut vestibulum mauris rutrum quis. Nam augue ex, accumsan quis ornare ac, suscipit vitae odio. Sed facilisis lectus nec vestibulum dignissim. Quisque dui ex, porttitor ultricies justo vitae</p>
-              <img src="" title="image pour plus tard" alt="image pour plus tard">
-          </details>
+              </details>
         </article>
       </div>
       <hr>
@@ -97,12 +100,13 @@
         <h2>Titre 4</h2>
         <hr>
         <h5>justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris </h5>
+        <br>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.</p>
         <details>
           <summary> </summary>
+            <img src="../data/images/image_test.jpg" title="image pour plus tard" alt="image pour plus tard">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum. Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris sed imperdiet erat, id elementum est. Proin aliquet quis felis quis mattis. Praesent vel vehicula erat, quis lacinia ipsum. Vivamus fermentum ut mi eget sagittis. Sed eu nisi eget tortor mattis imperdiet. Nullam vel tellus feugiat, cursus lectus at, pharetra ligula. Mauris pretium ullamcorper risus, eget luctus leo posuere at. Fusce nunc mauris, finibus eget nunc quis, molestie semper est. Morbi at dui sit amet urna condimentum ultricies eget sit amet lorem. Donec ut mi ex.
               Vivamus ultrices mattis risus, ut vestibulum mauris rutrum quis. Nam augue ex, accumsan quis ornare ac, suscipit vitae odio. Sed facilisis lectus nec vestibulum dignissim. Quisque dui ex, porttitor ultricies justo vitae, pharetra malesuada ipsum. Sed quis ultricies metus. Pellentesque lobortis tempus sapien sit amet faucibus. Nullam velit mauris, dictum sit amet commodo sit amet, fringilla nec mi. Suspendisse sit amet neque nec justo aliquam efficitur eu quis ligula. Etiam erat lorem, dignissim vel orci ac, laoreet ornare.</p>
-            <img src="" title="image pour plus tard" alt="image pour plus tard">
         </details>
       </article>
       <hr>
@@ -111,13 +115,14 @@
         <h2>Titre 5</h2>
         <hr>
         <h5>justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris </h5>
+        <br>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.</p>
         <details>
           <summary> </summary>
+            <img src="../data/images/image_test.jpg" title="image pour plus tard" alt="image pour plus tard">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum. Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris sed imperdiet erat, id elementum est. Proin aliquet quis felis quis mattis. Praesent vel vehicula erat, quis lacinia ipsum. Vivamus fermentum ut mi eget sagittis. Sed eu nisi eget tortor mattis imperdiet. Nullam vel tellus feugiat, cursus lectus at, pharetra ligula. Mauris pretium ullamcorper risus, eget luctus leo posuere at. Fusce nunc mauris, finibus eget nunc quis, molestie semper est. Morbi at dui sit amet urna condimentum ultricies eget sit amet lorem. Donec ut mi ex.
               Vivamus ultrices mattis risus, ut vestibulum mauris rutrum quis. Nam augue ex, accumsan quis ornare ac, suscipit vitae odio. Sed facilisis lectus nec vestibulum dignissim. Quisque dui ex, porttitor ultricies justo vitae, pharetra malesuada ipsum. Sed quis ultricies metus. Pellentesque lobortis tempus sapien sit amet faucibus. Nullam velit mauris, dictum sit amet commodo sit amet, fringilla nec mi. Suspendisse sit amet neque nec justo aliquam efficitur eu quis ligula. Etiam erat lorem, dignissim vel orci ac, laoreet ornare.</p>
-            <img src="" title="image pour plus tard" alt="image pour plus tard">
-        </details>
+            </details>
       </article>
     </main>
     <footer>
