ajout du responsive sur la page générale

--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
         <div class="header-info">
           <p>
             <strong>6</strong> saisons
-            <span>/</span>
+          </p>
+
+          <span class="sep"></span>
+
+          <p>
             <strong>28</strong> épisodes
+
           </p>
 
           <span class="sep"></span>
@@ -326,14 +331,14 @@
           </div>
 
           <article>
-            <p class="text-lead">Liens utiles</p>
+            <h3 class="text-lead">Liens utiles</h3>
             <a>Séries phares</a>
             <a>Critiques récentes</a>
             <a>Toutes les séries</a>
           </article>
 
           <article>
-            <p class="text-lead">Infos</p>
+            <h3 class="text-lead">Infos</h3>
             <a>A propos</a>
             <a>Conditions d'utilisation</a>
             <a>Confidentialité</a>
