fin de la page backstage desktop

--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="fr">
+  <!---HEAD--->
   <head>
       <meta charset="UTF-8" />
       <link rel="stylesheet" type="text/css" href="../styles/style.scss" >
@@ -7,8 +8,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Tabas'KHO</title>
   </head>
+  <!---BODY--->
   <body id="body_backstage">
 
+    <!---barre de navigation entre les pages--->
     <nav class="navbar">
       <a href="/">
         <svg id="logo" width="30" height="27" viewBox="0 0 30 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -28,6 +31,7 @@
         <li><a href="/pages/backstage.html" class="active">Backstage</a></li>
       </ul>
     </nav>
+    <!---HEADER--->
     <header>
       <div>
         <svg width="424" height="114" viewBox="0 0 424 114" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -44,7 +48,9 @@
       </div>
     </header>
     <hr>
+    <!---MAIN--->
     <main>
+      <!---1er article--->
       <article class="articleClair">
         <p class="datePublication">12 février 2089</p>
         <h2>Titre 1</h2>
@@ -60,7 +66,9 @@
             </details>
       </article>
       <hr>
+      <!---les 2 articles côte à côte--->
       <div>
+        <!---2e article--->
         <article class="articleSombre">
           <p class="datePublication">12 février 2089</p>
           <h2>Titre 2</h2>
@@ -77,7 +85,8 @@
                 Vivamus ultrices mattis risus, ut vestibulum mauris rutrum quis. Nam augue ex, accumsan quis ornare ac, suscipit vitae odio. Sed facilisis lectus nec vestibulum dignissim. Quisque dui ex, porttitor ultricies justo vitae</p>
               </details>
         </article>
-        <article class="articleSombre">
+        <!---3e article--->
+        <article class="articleSombre img_gauche">
           <p class="datePublication">12 février 2089</p>
           <h2>Titre 3</h2>
           <hr>
@@ -87,14 +96,16 @@
             Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, inter</p>
           <details>
             <summary> </summary>
-              <img src="../data/images/image_test.jpg" title="image pour plus tard" alt="image pour plus tard">
               <p>Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.
-                Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris sed imperdiet erat, id elementum est. Proin aliquet quis felis quis mattis. Praesent vel vehicula erat, quis lacinia ipsum. Vivamus fermentum ut mi eget sagittis. Sed eu nisi eget tortor mattis imperdiet. Nullam vel tellus feugiat, cursus lectus at, pharetra ligula. Mauris pretium ullamcorper risus, eget luctus leo posuere at. Fusce nunc mauris, finibus eget nunc quis, molestie semper est. Morbi at dui sit amet urna condimentum ultricies eget sit amet lorem. Donec ut mi ex.
+                Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris sed imperdiet erat,</p>
+                <img src="../data/images/image_test.jpg" title="image pour plus tard" alt="image pour plus tard">
+                <p>id elementum est. Proin aliquet quis felis quis mattis. Praesent vel vehicula erat, quis lacinia ipsum. Vivamus fermentum ut mi eget sagittis. Sed eu nisi eget tortor mattis imperdiet. Nullam vel tellus feugiat, cursus lectus at, pharetra ligula. Mauris pretium ullamcorper risus, eget luctus leo posuere at. Fusce nunc mauris, finibus eget nunc quis, molestie semper est. Morbi at dui sit amet urna condimentum ultricies eget sit amet lorem. Donec ut mi ex.
                 Vivamus ultrices mattis risus, ut vestibulum mauris rutrum quis. Nam augue ex, accumsan quis ornare ac, suscipit vitae odio. Sed facilisis lectus nec vestibulum dignissim. Quisque dui ex, porttitor ultricies justo vitae</p>
               </details>
         </article>
       </div>
       <hr>
+      <!---4e article--->
       <article class="articleClair">
         <p class="datePublication">12 février 2089</p>
         <h2>Titre 4</h2>
@@ -110,6 +121,7 @@
         </details>
       </article>
       <hr>
+      <!---5e article--->
       <article class="articleSombre">
         <p class="datePublication">12 février 2089</p>
         <h2>Titre 5</h2>
@@ -119,12 +131,13 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum.</p>
         <details>
           <summary> </summary>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum. Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris sed imperdiet erat, id elementum est. Proin aliquet quis felis quis mattis. Praesent vel vehicula erat, quis lacinia ipsum. Vivamus fermentum ut mi eget sagittis. Sed eu nisi eget tortor mattis imperdiet. Nullam vel tellus feugiat, cursus lectus at, pharetra ligula. Mauris</p>
             <img src="../data/images/image_test.jpg" title="image pour plus tard" alt="image pour plus tard">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquam laoreet vehicula. In viverra diam in enim venenatis, vel eleifend lorem pharetra. Mauris maximus ex ipsum, in faucibus arcu consequat sit amet. Pellentesque vulputate consequat pulvinar. Suspendisse potenti. Morbi eget lectus lectus. Proin condimentum ac nunc ut mollis. Sed sed nibh consectetur, finibus magna at, vestibulum elit. Nullam malesuada id velit ut fermentum. Phasellus velit urna, ullamcorper eget ante eget, pulvinar auctor felis. Nam lacus diam, vestibulum vitae nibh at, elementum molestie nibh. Duis non mi a justo dignissim dictum in vitae felis. Cras facilisis neque sed fermentum efficitur. Etiam quam mauris, congue ut cursus vitae, interdum vitae tellus. Mauris sed imperdiet erat, id elementum est. Proin aliquet quis felis quis mattis. Praesent vel vehicula erat, quis lacinia ipsum. Vivamus fermentum ut mi eget sagittis. Sed eu nisi eget tortor mattis imperdiet. Nullam vel tellus feugiat, cursus lectus at, pharetra ligula. Mauris pretium ullamcorper risus, eget luctus leo posuere at. Fusce nunc mauris, finibus eget nunc quis, molestie semper est. Morbi at dui sit amet urna condimentum ultricies eget sit amet lorem. Donec ut mi ex.
-              Vivamus ultrices mattis risus, ut vestibulum mauris rutrum quis. Nam augue ex, accumsan quis ornare ac, suscipit vitae odio. Sed facilisis lectus nec vestibulum dignissim. Quisque dui ex, porttitor ultricies justo vitae, pharetra malesuada ipsum. Sed quis ultricies metus. Pellentesque lobortis tempus sapien sit amet faucibus. Nullam velit mauris, dictum sit amet commodo sit amet, fringilla nec mi. Suspendisse sit amet neque nec justo aliquam efficitur eu quis ligula. Etiam erat lorem, dignissim vel orci ac, laoreet ornare.</p>
-            </details>
+            <p>pretium ullamcorper risus, eget luctus leo posuere at. Fusce nunc mauris, finibus eget nunc quis, molestie semper est. Morbi at dui sit amet urna condimentum ultricies eget sit amet lorem. Donec ut mi ex. Vivamus ultrices mattis risus, ut vestibulum mauris rutrum quis. Nam augue ex, accumsan quis ornare ac, suscipit vitae odio. Sed facilisis lectus nec vestibulum dignissim. Quisque dui ex, porttitor ultricies justo vitae, pharetra malesuada ipsum. Sed quis ultricies metus. Pellentesque lobortis tempus sapien sit amet faucibus. Nullam velit mauris, dictum sit amet commodo sit amet, fringilla nec mi. Suspendisse sit amet neque nec justo aliquam efficitur eu quis ligula. Etiam erat lorem, dignissim vel orci ac, laoreet ornare.</p>
+        </details>
       </article>
     </main>
+    <!---FOOTER--->
     <footer>
       <div>
         <!-- liens pratiques -->
