--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <ul>
         <li><a href="/pages/saisons.html">Saisons</a></li>
-        <li><a href="#">Critiques</a></li>
+        <li><a href="/pages/critique.html">Critiques</a></li>
         <li><a href="/pages/backstage.html">Backstage</a></li>
       </ul>
     </nav>
