--- a/index.html
+++ b/index.html
@@ -343,6 +343,8 @@
                 <img src="public/star.svg" alt="star">
                 <img src="public/star.svg" alt="star">
                 <img src="public/star.svg" alt="star">
+                <img src="public/star-unfill.svg" alt="star">
+                <img src="public/star-unfill.svg" alt="star">
               </div>
             </div>
           </div>
@@ -353,7 +355,9 @@
               <div class="stars">
                 <img src="public/star.svg" alt="star">
                 <img src="public/star.svg" alt="star">
-                <img src="public/star.svg" alt="star">
+                <img src="public/star-unfill.svg" alt="star">
+                <img src="public/star-unfill.svg" alt="star">
+                <img src="public/star-unfill.svg" alt="star">
               </div>
             </div>
           </div>
