vrai fin de la page backstage laptop et debut du responsive

--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -86,7 +86,7 @@
               </details>
         </article>
         <!---3e article--->
-        <article class="articleSombre img_gauche decale_vers_droite">
+        <article class="articleSombre img_gauche decalage_a_droite_droite">
           <p class="datePublication">12 février 2089</p>
           <h2>Titre 3</h2>
           <hr>
@@ -140,9 +140,11 @@
     <!---FOOTER--->
     <footer>
       <div>
-        <!-- liens pratiques -->
         <div>
+
+          <!-- Logo tabas'KHO -->
           <div>
+            <a href="/">
             <svg
               width="30"
               height="27"
@@ -177,29 +179,31 @@
                 fill="#C58AEE"
               />
             </svg>
+            </a>
 
             <p>Tabas'<strong>KHO</strong></p>
           </div>
 
           <article>
             <p class="text-lead">Liens utiles</p>
-            <p>Séries phare</p>
-            <p>Critiques récentes</p>
-            <p>Toutes les séries</p>
+            <a href="\">Séries phares</a>
+            <a href="\">Critiques récentes</a>
+            <a href="\">Toutes les séries</a>
           </article>
 
           <article>
             <p class="text-lead">Infos</p>
-            <p>Séries phare</p>
-            <p>Critiques récentes</p>
-            <p>Toutes les séries</p>
+            <a href="\">A propos</a>
+            <a href="\">Conditions d'utilisation</a>
+            <a href="\">Confidentialité</a>
           </article>
         </div>
 
         <!-- Div des réseaux sociaux -->
         <div>
 
-          <a>
+          <!-- twitter -->
+          <a href="https://twitter.com/" target="_blank">
             <svg
               width="20"
               height="18"
@@ -222,7 +226,8 @@
             </svg>
           </a>
 
-          <a>
+          <!-- insta -->
+          <a href="https://www.instagram.com/" target="_blank">
             <svg
               width="20"
               height="20"
@@ -237,7 +242,8 @@
             </svg>
           </a>
 
-          <a>
+          <!-- snapchat -->
+          <a href="https://accounts.snapchat.com/" target="_blank">
             <svg
               width="20"
               height="20"
@@ -255,7 +261,8 @@
           </a>
         </div>
 
-        <p>@2023 Tabs'KHO, Tous droit réservé</p>
+        <p>@2023 Tabs'KHO, Tous droits réservés</p>
       </div>
     </footer>
   </body>
+</html>
