--- a/index.html
+++ b/index.html
@@ -171,11 +171,12 @@
       </header>
 
       <div class="actors-grid">
+
         <div>
           <div class="actor-card">
             <div class="images-container">
-              <img src="./public/actor-img.png" alt="Image d'acteur">
-              <img src="./public/actor-img.png" alt="Image d'acteur">
+              <img src="./public/actors/john-hamm.png" alt="Image d'acteur">
+              <img src="./public/actors/john-hamm.png" alt="Image d'acteur">
             </div>
 
             <div class="hover-overlay">
@@ -183,16 +184,16 @@
             </div>
 
             <div class="actor-infos-overlay">
-              <h3>Lacie Pound</h3>
-              <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
+              <h3>Matt Trent</h3>
+              <p>Matt Trent, alias "Coach," partage des histoires interconnectées explorant les dilemmes éthiques liés à l'intelligence artificielle et à la réalité virtuelle.</p>
             </div>
 
             <p>Bryce Dallas Howard</p>
           </div>
           <div class="actor-card">
             <div class="images-container">
-              <img src="./public/actor-img.png" alt="Image d'acteur">
-              <img src="./public/actor-img.png" alt="Image d'acteur">
+              <img src="./public/actors/daniel-kaluuya.png" alt="Image d'acteur">
+              <img src="./public/actors/daniel-kaluuya.png" alt="Image d'acteur">
             </div>
 
             <div class="hover-overlay">
@@ -200,18 +201,19 @@
             </div>
 
             <div class="actor-infos-overlay">
-              <h3>Lacie Pound</h3>
-              <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
+              <h3>Bing Madsen </h3>
+              <p>Dans une société dystopique, Bing Madsen pédale sans relâche pour produire de l'énergie, exposant la déshumanisation résultant d'une culture de divertissement omniprésente.</p>
             </div>
 
             <p>Bryce Dallas Howard</p>
           </div>
         </div>
+
         <div>
           <div class="actor-card">
             <div class="images-container">
-              <img src="./public/actor-img.png" alt="Image d'acteur">
-              <img src="./public/actor-img.png" alt="Image d'acteur">
+              <img src="./public/actors/bryce-dallas-howard.png" alt="Image d'acteur">
+              <img src="./public/actors/bryce-dallas-howard.png" alt="Image d'acteur">
             </div>
 
             <div class="hover-overlay">
@@ -227,8 +229,8 @@
           </div>
           <div class="actor-card">
             <div class="images-container">
-              <img src="./public/actor-img.png" alt="Image d'acteur">
-              <img src="./public/actor-img.png" alt="Image d'acteur">
+              <img src="./public/actors/hayley-atwell.png" alt="Image d'acteur">
+              <img src="./public/actors/hayley-atwell.png" alt="Image d'acteur">
             </div>
 
             <div class="hover-overlay">
@@ -236,16 +238,16 @@
             </div>
 
             <div class="actor-infos-overlay">
-              <h3>Lacie Pound</h3>
-              <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
+              <h3>Martha</h3>
+              <p>Après la perte de son compagnon, Martha utilise une technologie pour recréer virtuellement Ash. L'épisode soulève des questions poignantes sur la vie, la mort et la connexion humaine.</p>
             </div>
 
-            <p>Bryce Dallas Howard</p>
+            <p>Hayley Atwell</p>
           </div>
           <div class="actor-card">
             <div class="images-container">
-              <img src="./public/actor-img.png" alt="Image d'acteur">
-              <img src="./public/actor-img.png" alt="Image d'acteur">
+              <img src="./public/actors/domhnall-gleeson.png" alt="Image d'acteur">
+              <img src="./public/actors/domhnall-gleeson.png" alt="Image d'acteur">
             </div>
 
             <div class="hover-overlay">
@@ -253,11 +255,11 @@
             </div>
 
             <div class="actor-infos-overlay">
-              <h3>Lacie Pound</h3>
-              <p>Une femme vivant dans une société futuriste où les interactions sociales sont notées par les individus.</p>
+              <h3>Ash</h3>
+              <p>Ash devient une intelligence artificielle après sa mort, explorant les défis émotionnels et moraux liés à la recréation numérique des êtres chers.</p>
             </div>
 
-            <p>Bryce Dallas Howard</p>
+            <p>Domhnall Gleeson</p>
           </div>
         </div>
       </div>
