bonne navbar pour tout le monde mtnt

--- a/pages/saisons.html
+++ b/pages/saisons.html
@@ -54,7 +54,7 @@
 
       <ul>
         <li><a href="/pages/saisons.html" class="active">Saisons</a></li>
-        <li><a href="/pages/critiques.html">Critiques</a></li>
+        <li><a href="/pages/critique.html">Critiques</a></li>
         <li><a href="/pages/backstage.html">Backstage</a></li>
       </ul>
       
