--- a/pages/critique.html
+++ b/pages/critique.html
@@ -9,26 +9,65 @@
     <title>Tabas'KHO</title>
 </head>
 <body id="body_page_critique">
-    <nav class="navbar">
-    <a href="#">
-        <svg id="logo" width="30" height="27" viewBox="0 0 30 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M8.21958 15.5769C5.51916 15.3663 1.50012 17.4698 1.50012 17.4698V25.3121H28.5001V19.7684C28.5001 19.7684 26.0383 17.8994 24.2241 17.4698C20.9088 16.6848 19.1614 20.2021 15.7942 19.7684C12.5119 19.3457 11.5157 15.8339 8.21958 15.5769Z" fill="#F67A60"/>
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 9.375V22.5C0 24.5684 1.68164 26.25 3.75 26.25H26.25C28.3184 26.25 30 24.5684 30 22.5V9.375H0ZM2 11.375V22.5C2 23.4638 2.78621 24.25 3.75 24.25H26.25C27.2138 24.25 28 23.4638 28 22.5V11.375H2Z" fill="#C58AEE"/>
-        <path d="M26.25 0C26.3672 0 26.4785 0.00585933 26.5898 0.0175781L19.1016 7.5H13.7051L21.2051 0H26.25Z" fill="#C58AEE"/>
-        <path d="M29.1797 1.40625C29.627 1.96672 29.921 2.66708 29.9862 3.42813C29.9953 3.53431 30 3.64167 30 3.75V7.5H23.0859L29.1797 1.40625Z" fill="#C58AEE"/>
-        <path d="M0.357422 7.5H0V3.75C0 1.68164 1.68164 0 3.75 0H7.85742L0.357422 7.5Z" fill="#C58AEE"/>
-        <path d="M9.72656 7.5H4.33008L11.8301 0H17.2266L9.72656 7.5Z" fill="#C58AEE"/>
-        </svg>
 
-        Tabas'<strong>KHO</strong>
+  <nav class="navbar">
+    <a href="/">
+      <svg
+        id="logo"
+        width="30"
+        height="27"
+        viewBox="0 0 30 27"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M8.21958 15.5769C5.51916 15.3663 1.50012 17.4698 1.50012 17.4698V25.3121H28.5001V19.7684C28.5001 19.7684 26.0383 17.8994 24.2241 17.4698C20.9088 16.6848 19.1614 20.2021 15.7942 19.7684C12.5119 19.3457 11.5157 15.8339 8.21958 15.5769Z"
+          fill="#F67A60"
+        />
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M0 9.375V22.5C0 24.5684 1.68164 26.25 3.75 26.25H26.25C28.3184 26.25 30 24.5684 30 22.5V9.375H0ZM2 11.375V22.5C2 23.4638 2.78621 24.25 3.75 24.25H26.25C27.2138 24.25 28 23.4638 28 22.5V11.375H2Z"
+          fill="#C58AEE"
+        />
+        <path
+          d="M26.25 0C26.3672 0 26.4785 0.00585933 26.5898 0.0175781L19.1016 7.5H13.7051L21.2051 0H26.25Z"
+          fill="#C58AEE"
+        />
+        <path
+          d="M29.1797 1.40625C29.627 1.96672 29.921 2.66708 29.9862 3.42813C29.9953 3.53431 30 3.64167 30 3.75V7.5H23.0859L29.1797 1.40625Z"
+          fill="#C58AEE"
+        />
+        <path
+          d="M0.357422 7.5H0V3.75C0 1.68164 1.68164 0 3.75 0H7.85742L0.357422 7.5Z"
+          fill="#C58AEE"
+        />
+        <path
+          d="M9.72656 7.5H4.33008L11.8301 0H17.2266L9.72656 7.5Z"
+          fill="#C58AEE"
+        />
+      </svg>
+
+      Tabas'<strong>KHO</strong>
     </a>
 
     <ul>
-        <li><a href="saisons.html">Saisons</a></li>
-        <li><a href="pages/critique.html" class="active">Critiques</a></li>
-        <li><a href="pages/backstage.html">Backstage</a></li>
+      <li><a href="/pages/saisons.html">Saisons</a></li>
+      <li><a href="/pages/critique.html" class="active">Critiques</a></li>
+      <li><a href="/pages/backstage.html">Backstage</a></li>
     </ul>
-    </nav>
+    
+    <a class="hamburger-menu">
+      <svg width="22" height="10" viewBox="0 0 22 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M1 1H21" stroke="white" stroke-width="2" stroke-linecap="round"/>
+      </svg>
+      <svg width="22" height="10" viewBox="0 0 22 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M1 1H21" stroke="white" stroke-width="2" stroke-linecap="round"/>
+      </svg>
+    </a>
+
+  </nav>
+
     <header>
         <div>
         <svg width="424" height="114" viewBox="0 0 424 114" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -500,5 +539,8 @@
           <p>@2023 Tabas'KHO, Tous droit réservé</p>
         </div>
       </footer>
-</body>
+
+      <script type="module" src="../js/navbar.js"></script>
+      
+  </body>
 </html>
