--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="fr">
+
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/images/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tabas'KHO</title>
 
     <link rel="stylesheet" href="./styles/style.scss">
   </head>
+
   <body>
 
     <div class="load-overlay">
@@ -150,13 +152,13 @@
 
           <span class="sep"></span>
 
-          <img src="./public/icon-age-limit.png" alt="Pictogramme age limite">
+          <img src="./public/images/icon-age-limit.png" alt="Pictogramme age limite">
         </div>
       </div>
 
       <span class="glow"></span>
 
-      <img class="background" src="./public/header-background.png" alt="Affiche de Black Mirror">
+      <img class="background" src="./public/images/header-background.png" alt="Affiche de Black Mirror">
     </header>
 
     <!-- Actors section -->
