--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -4,8 +4,10 @@
   <head>
       <meta charset="UTF-8" />
       <link rel="stylesheet" type="text/css" href="../styles/style.scss" >
-      <link rel="icon" type="image/svg+xml" href="./public/logo.svg" />
+      <link rel="icon" type="image/svg+xml" href="../public/images/logo.png" />
+    
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
       <title>Tabas'KHO</title>
   </head>
   <!---BODY--->
