--- a/pages/saisons.html
+++ b/pages/saisons.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="icon" type="image/svg+xml" href="../public/images/logo.png" />
     <link rel="stylesheet" href="../styles/style.scss" type="text/css" />
 
     <title>Présentation de toutes les saisons</title>
