flèches de retour boutons saisons faites

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/images/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/svg/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tabas'KHO</title>
 
@@ -344,11 +344,11 @@
             <div>
               <img src="public/media/telerama.png" />
               <div class="stars">
-                <img src="public/star.svg" alt="star">
-                <img src="public/star.svg" alt="star">
-                <img src="public/star.svg" alt="star">
-                <img src="public/star-unfill.svg" alt="star">
-                <img src="public/star-unfill.svg" alt="star">
+                <img src="public/svg/star.svg" alt="star">
+                <img src="public/svg/star.svg" alt="star">
+                <img src="public/svg/star.svg" alt="star">
+                <img src="public/svg/star-unfill.svg" alt="star">
+                <img src="public/svg/star-unfill.svg" alt="star">
               </div>
             </div>
           </div>
@@ -357,21 +357,21 @@
             <div>
               <img src="public/media/alo-cine.png" />
               <div class="stars">
-                <img src="public/star.svg" alt="star">
-                <img src="public/star.svg" alt="star">
-                <img src="public/star-unfill.svg" alt="star">
-                <img src="public/star-unfill.svg" alt="star">
-                <img src="public/star-unfill.svg" alt="star">
+                <img src="public/svg/star.svg" alt="star">
+                <img src="public/svg/star.svg" alt="star">
+                <img src="public/svg/star-unfill.svg" alt="star">
+                <img src="public/svg/star-unfill.svg" alt="star">
+                <img src="public/svg/star-unfill.svg" alt="star">
               </div>
             </div>
           </div>
         </div>
         <div class="swiper-button-prev">
-          <img src="public/caret-left.svg" alt="Caret">
+          <img src="public/svg/caret-left.svg" alt="Caret">
 
         </div>
         <div class="swiper-button-next">
-          <img src="public/caret-left.svg" alt="Caret">
+          <img src="public/svg/caret-left.svg" alt="Caret">
         </div>
 
       </div>
